--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node app.js",
     "test": "nodemon app.js"
   },
+  "engines": {
+    "node": "10.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RamNvR/sampleAPI.git"
