--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample REST API",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "nodemon app.js"
   },
   "engines": {
